@startuml
title Class Diagram for Storage Feature
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
left to right direction

class Storage {
  - dataFile: File
  + load(inventory: Inventory, ui: UI)
  + save(inventory: Inventory)
  - parseStoredLine(line: String, parser: AddItemCommandParser)
}

class AddItemCommandParser

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class AddItemCommand {
  + execute(inventory: Inventory, ui: UI)
}

class Inventory {
  + getCategories()
}

class Category {
  + getName()
  + getItems()
}

class Item {
  + toStorageString(categoryName: String)
}

class UI {
  + showSkippedLine(line: String, reason: String)
}

class File

note as N1
  Storage loads persisted lines by reusing
  AddItemCommandParser to create AddItemCommand
  objects, then executes those commands on
  the Inventory.

  During save, Storage traverses the Inventory
  and converts each Item into its storage format.
end note

Command <|-- AddItemCommand
AddItemCommandParser ..> AddItemCommand : creates
Storage --> AddItemCommand : executes during load
Storage --> Inventory : populates / reads
Storage --> UI : reports skipped lines via
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
Storage *-- File : owns dataFile
Storage ..> Item : formats
@enduml
